完成数字签名服务

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,12 +12,11 @@
     <meta HTTP-EQUIV="Cache-Control" CONTENT="no-cache">
     <meta HTTP-EQUIV="Expires" CONTENT="0">
 
-    <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script type="text/javascript" src="/lib/weixin/jweixin-1.0.0.js"></script>
 
 
 </head>
 <body >
-
 
         这是一个主页
         <button onclick="getSignature();">获得token</button>
